--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run dev:server\" \"vite\"",
+    "dev:server": "node --watch server.js",
+    "start": "node server.js",
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
@@ -15,7 +17,9 @@
   "dependencies": {
     "@prisma/client": "^5.22.0",
     "bcryptjs": "^3.0.3",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.6",
+    "date-fns": "^4.1.0",
     "dompurify": "^3.3.1",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
@@ -24,6 +28,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^8.0.1",
     "prisma": "^5.22.0",
     "qrcode": "^1.5.4",
     "quill": "^2.0.3",
@@ -32,6 +38,7 @@
     "react-icons": "^5.5.0",
     "react-quill-new": "^3.8.3",
     "react-router-dom": "^7.13.0",
+    "socket.io-client": "^4.8.3",
     "speakeasy": "^2.0.0",
     "zod": "^4.3.6"
   },
@@ -41,11 +48,13 @@
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.24",
+    "concurrently": "^9.2.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "postcss": "^8.5.6",
+    "socket.io": "^4.8.3",
     "tailwindcss": "^3.4.19",
     "vite": "^7.3.1"
   }
