--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # dependencies
-/node_modules
+node_modules/
 /.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage/
 
 # production
-/dist
+dist/
 
 # misc
 .DS_Store
